[workspace]

members = [
  "contracts/basket-collector",
  "contracts/basket-contract",
  "contracts/basket-dummy-oracle",
  "contracts/basket-penalty",
  "contracts/basket-gov",
  "contracts/basket-factory",
  "contracts/basket-staking",
  "contracts/basket-community",
  "contracts/basket-incentives",
  "contracts/basket-incentives-custody",
  "contracts/terraswap-oracle",
  "contracts/airdrop",
  "libraries/*",
  "packages/*"
]