[workspace]
members = [
  "contracts/nebula-airdrop",
  "contracts/nebula-cluster",
  "contracts/nebula-cluster-factory",
  "contracts/nebula-collector",
  "contracts/nebula-community",
  "contracts/nebula-oracle",
  "contracts/nebula-gov",
  "contracts/nebula-incentives",
  "contracts/nebula-incentives-custody",
  "contracts/nebula-lp-staking",
  "contracts/nebula-penalty",
  "contracts/nebula-proxy",
  "libraries/*",
  "packages/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
