[package]
name = "basket-contract"
version = "0.1.0"
authors = ["William Chen <wchen298@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
terra-cosmwasm = { version = "1.2.2" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
cw20 = { version = "0.2" }
basket-math = { path = "../../libraries/basket-math" }
base64 = "*"
terraswap = "1.2.0"
log = "*"

[dev-dependencies]
# cosmwasm-vm = { version = "0.10.1", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.10.1"
plotters = "^0.3.0"
pretty_assertions = "0.6.1"