[package]
name = "nebula-cluster"
version = "0.1.0"
authors = ["Nebula Protocol <engineering@neb.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2", default-features = false }
cosmwasm-storage = { version = "0.16.2", default-features = false, features = ["iterator"] }
terra-cosmwasm = { version = "2.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
cw20 = { version = "0.8.0" }
base64 = "*"
astroport = { path = "../../packages/astroport" }
cluster-math = { path = "../../libraries/cluster-math" }
nebula-protocol = { version = "2.0.0", path = "../../packages/nebula_protocol" }
thiserror = { version = "1.0.30" }

[dev-dependencies]
# cosmwasm-vm = { version = "0.16.0", default-features = false }
cosmwasm-schema = "0.16.0"
plotters = "^0.3.0"
pretty_assertions = "0.6.1"
