[package]
name = "nebula-gov"
version = "1.0.0"
authors = ["Nebula Protocol <engineering@neb.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0", default-features = false }
cosmwasm-storage = { version = "0.16.0", default-features = false }
cluster-math = { path = "../../libraries/cluster-math" }
schemars = "0.8.1"
nebula-protocol = { version = "1.0.0", path = "../../packages/nebula_protocol" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
