[package]
name = "nebula-gov"
version = "2.1.1"
authors = ["Terraform Labs, PTE."]
edition = "2018"
license = "Apache-2.0"
description = "A Goverance contract for Nebula Protocol - allows a user to create poll and do vote"
repository = "https://github.com/CosmWasm/cosmwasm-examples"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
nebula-protocol = { version = "2.0.0", path = "../../packages/nebula_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4"
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
