[package]
name = "nebula-oracle"
version = "2.0.0"
authors = ["Nebula Protocol <engineering@neb.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2", default-features = false}
cosmwasm-storage = { version = "0.16.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
nebula-protocol = { version = "2.0.0", path = "../../packages/nebula_protocol" }
astroport = { path = "../../packages/astroport" }
terra-cosmwasm = "2.2.0"
tefi-oracle = { version = "0.1.0", path = "../../packages/tefi_oracle" }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
