[package]
name = "basket-math"
version = "0.1.0"
authors = ["William Chen <wchen298@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
terra-cosmwasm = { version = "1.2.2" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bigint = "4"

[dev-dependencies]
plotters = "^0.3.0"