[package]
name = "cluster-math"
version = "0.1.0"
authors = ["Nebula Protocol <engineering@neb.finance>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0", default-features = false }
cosmwasm-storage = { version = "0.16.0", default-features = false }
terra-cosmwasm = { version = "1.2.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bigint = "4"

[dev-dependencies]
plotters = "^0.3.0"